Add combobox Weapons

--- a/index.html
+++ b/index.html
@@ -562,6 +562,80 @@
                     </tbody>
                 </table>
 
+                <datalist id="weapons_list">
+                    <!-- Arbalètes -->
+                    <option value="Arbalète">Arbalètes</option>
+                    <option value="Arbalète Légère">Arbalètes</option>
+                    <option value="Arbalète Lourde">Arbalètes</option>
+                    <option value="Arbalète Myrienne">Arbalètes</option>
+                    <option value="Arbalète Légère">Arbalètes</option>
+                    <!-- Arcs -->
+                    <option value="Arc Courbe">Arcs</option>
+                    <option value="Arc de Chasse">Arcs</option>
+                    <option value="Arc Long">Arcs</option>
+                    <!-- Armes d'Hast -->
+                    <option value="Hache D'Armes">Armes d'Hast</option>
+                    <option value="Hallebarde">Armes d'Hast</option>
+                    <option value="Outil de Paysan">Armes d'Hast</option>
+                    <!-- Boucliers -->
+                    <option value="Bouclier">Boucliers</option>
+                    <option value="Grand Bouclier">Boucliers</option>
+                    <option value="Pavois">Boucliers</option>
+                    <option value="Targe">Boucliers</option>
+                    <!-- Casse-tête -->
+                    <option value="Bâton">Casse-tête</option>
+                    <option value="Bec de Corbin">Casse-tête</option>
+                    <option value="Fléau">Casse-tête</option>
+                    <option value="Fléau D'armes">Casse-tête</option>
+                    <option value="Trique/Gourdin">Casse-tête</option>
+                    <option value="Maillet">Casse-tête</option>
+                    <option value="Marteau de Guerre">Casse-tête</option>
+                    <option value="Masse d'Armes">Casse-tête</option>
+                    <option value="Morgenstern">Casse-tête</option>
+                    <!-- Escrime -->
+                    <option value="Epée Braavienne">Escrime</option>
+                    <option value="Epée Courte">Escrime</option>
+                    <option value="Dague Main Gauche">Escrime</option>
+                    <!-- Haches -->
+                    <option value="Cognée">Haches</option>
+                    <option value="Hache de bataille">Haches</option>
+                    <option value="Hachette">Haches</option>
+                    <option value="Hache Longue">Haches</option>
+                    <option value="Pioche">Haches</option>
+                    <!-- Jet -->
+                    <option value="Couteau de jet">Jet</option>
+                    <option value="Filet">Jet</option>
+                    <option value="Foëne de jet">Jet</option>
+                    <option value="Fronde">Jet</option>
+                    <option value="Hachette de jet">Jet</option>
+                    <option value="Javeline">Jet</option>
+                    <option value="Lance de Jet">Jet</option>
+                    <option value="Trident de jet">Jet</option>
+                    <!-- Lames Courtes -->
+                    <option value="Dague">Lames Courtes</option>
+                    <option value="Poignard">Lames Courtes</option>
+                    <option value="Stylet">Lames Courtes</option>
+                    <option value="Couteau">Lames Courtes</option>
+                    <!-- Lames Longues -->
+                    <option value="Arakh">Lames Longues</option>
+                    <option value="Epée Bâtarde">Lames Longues</option>
+                    <option value="Epée Longue">Lames Longues</option>
+                    <option value="Espadon">Lames Longues</option>
+                    <!-- Lances -->
+                    <option value="Epieu">Lances</option>
+                    <option value="Foëne">Lances</option>
+                    <option value="Lance">Lances</option>
+                    <option value="Lance de Joute">Lances</option>
+                    <option value="Pique">Lances</option>
+                    <option value="Lance de guerre">Lances</option>
+                    <option value="Trident">Lances</option>
+                    <!-- Rixe -->
+                    <option value="Fouet">Rixe</option>
+                    <option value="Gantelet">Rixe</option>
+                    <option value="Poing">Rixe</option>
+                    <option value="Arme Improvisée">Rixe</option>
+                </datalist>
+
                 <!-- ---------------- -->
                 <!--      Armes       -->
                 <!-- ---------------- -->
@@ -577,23 +651,30 @@
                         </tr>
                         <!-- 1ere ligne -->
                         <tr>
-                            <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+                            <td class="td-not-editable">
+                                <input list="weapons_list" type="text" id="weapons_choice1"/>
+                            </td>
+                            <td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td>
                         </tr>
                         <!-- 2eme ligne -->
                         <tr>
-                            <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+                            <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice2"/></td>
+                            <td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td>
                         </tr>
                         <!-- 3eme ligne -->
                         <tr>
-                            <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+                            <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice3"/></td>
+                            <td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td>
                         </tr>
                         <!-- 4eme ligne -->
                         <tr>
-                            <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+                            <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice4"/></td>
+                            <td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td>
                         </tr>
                         <!-- 5eme ligne -->
                         <tr>
-                            <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
+                            <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice5"/></td>
+                            <td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td>
                         </tr>
                     </tbody>
                 </table>
