Add combobox Qualities

--- a/index.html
+++ b/index.html
@@ -636,6 +636,15 @@
                     <option value="Arme Improvisée">Rixe</option>
                 </datalist>
 
+                <datalist id="qualities_list">
+                    <option value="Mauvaise">-1D CAC ou Tir</option>
+                    <option value="Normale">Aucun Bonus/Malus</option>
+                    <option value="Supérieure">+1 CAC ou Tir</option>
+                    <option value="Extraordinaire">+1 CAC ou Tir + 1 Dégâts</option>
+                    <option value="Obsidienne">(Dagues et Flèches) Perforante+1 - Fragile</option>
+                    <option value="Os-Dragon">Perforante+1 Dégâts +1</option>
+                </datalist>
+
                 <!-- ---------------- -->
                 <!--      Armes       -->
                 <!-- ---------------- -->
@@ -654,27 +663,42 @@
                             <td class="td-not-editable">
                                 <input list="weapons_list" type="text" id="weapons_choice1"/>
                             </td>
-                            <td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice1"/></td>
+                            <td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable">&nbsp;</td>
                         </tr>
                         <!-- 2eme ligne -->
                         <tr>
                             <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice2"/></td>
-                            <td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice2"/></td>
+                            <td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable">&nbsp;</td>
                         </tr>
                         <!-- 3eme ligne -->
                         <tr>
                             <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice3"/></td>
-                            <td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice3"/></td>
+                            <td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable">&nbsp;</td>
                         </tr>
                         <!-- 4eme ligne -->
                         <tr>
                             <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice4"/></td>
-                            <td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice4"/></td>
+                            <td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable">&nbsp;</td>
                         </tr>
                         <!-- 5eme ligne -->
                         <tr>
                             <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice5"/></td>
-                            <td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td><td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice5"/></td>
+                            <td class="td-not-editable">&nbsp;</td>
+                            <td class="td-not-editable">&nbsp;</td>
                         </tr>
                     </tbody>
                 </table>
