FIX height table Armors

--- a/index.html
+++ b/index.html
@@ -487,8 +487,8 @@
                 <table class="stat-box armor">
                     <tbody>
                     <tr class="t-header">
-                        <td>Valeur</td>
-                        <td>Malus</td>
+                        <td>Valeur d'Armure</td>
+                        <td>Malus d'Armure</td>
                         <td>Encombrement</td>
                     </tr>
                     <tr class="Score">
