[WIP] Add clear of comboboxes on focusin and structure for update values associated

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
                     </tr>
                     <tr class="Score">
                         <td style="text-align: left" colspan="3">
-                            <input list="armors_list" type="text" id="armors_choice"/>
+                            <input list="armors_list" type="text" id="armors_choice" class="combobox combobox--armors"/>
                         </td>
                     </tr>
                     </tbody>
@@ -683,34 +683,34 @@
                         <!-- 1ere ligne -->
                         <tr>
                             <td class="td-not-editable">
-                                <input list="weapons_list" type="text" id="weapons_choice1"/>
+                                <input list="weapons_list" type="text" id="weapons_choice1" class="combobox combobox--weapons"/>
                             </td>
                             <td class="td-not-editable">&nbsp;</td>
-                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice1"/></td>
+                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice1" class="combobox combobox--qualities"/></td>
                             <td class="td-not-editable">&nbsp;</td>
                             <td class="td-not-editable">&nbsp;</td>
                         </tr>
                         <!-- 2eme ligne -->
                         <tr>
-                            <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice2"/></td>
+                            <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice2 " class="combobox combobox--weapons"/></td>
                             <td class="td-not-editable">&nbsp;</td>
-                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice2"/></td>
+                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice2" class="combobox combobox--qualities"/></td>
                             <td class="td-not-editable">&nbsp;</td>
                             <td class="td-not-editable">&nbsp;</td>
                         </tr>
                         <!-- 3eme ligne -->
                         <tr>
-                            <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice3"/></td>
+                            <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice3" class="combobox combobox--weapons"/></td>
                             <td class="td-not-editable">&nbsp;</td>
-                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice3"/></td>
+                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice3" class="combobox combobox--qualities"/></td>
                             <td class="td-not-editable">&nbsp;</td>
                             <td class="td-not-editable">&nbsp;</td>
                         </tr>
                         <!-- 4eme ligne -->
                         <tr>
-                            <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice4"/></td>
+                            <td class="td-not-editable"><input list="weapons_list" type="text" id="weapons_choice4" class="combobox combobox--weapons"/></td>
                             <td class="td-not-editable">&nbsp;</td>
-                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice4"/></td>
+                            <td class="td-not-editable"><input list="qualities_list" type="text" id="qualities_choice4" class="combobox combobox--qualities"/></td>
                             <td class="td-not-editable">&nbsp;</td>
                             <td class="td-not-editable">&nbsp;</td>
                         </tr>
@@ -987,5 +987,6 @@
 
         <script src="https://code.jquery.com/jquery-3.2.0.min.js" integrity="sha256-JAW99MJVpJBGcbzEuXk4Az05s/XyDdBomFqNlM3ic+I=" crossorigin="anonymous"></script>
         <script src="js/index.js"></script>
+        <script src="js/comboboxes.js"></script>
     </body>
 </html>
